--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "6.2.3"
+    "@redwoodjs/core": "6.2.3",
+    "prisma": "^5.3.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
@@ -20,5 +21,10 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@3.6.3",
+  "dependencies": {
+    "axios": "^1.5.0",
+    "graphql-tag": "^2.12.6",
+    "redwood": "^0.0.1"
+  }
 }
