--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -34,6 +34,7 @@
     "../.redwood/types/includes/all-*",
     "../.redwood/types/includes/web-*",
     "../types",
-    "./types"
+    "./types",
+    "**/*.graphql"
   ]
 }
