--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@redwoodjs/forms": "6.2.3",
     "@redwoodjs/router": "6.2.3",
     "@redwoodjs/web": "6.2.3",
+    "@walletconnect/sign-client": "^2.10.1",
     "@web3auth/modal": "^7.0.2",
     "framer-motion": "^10.16.4",
     "humanize-string": "2.1.0",
