--- a/redwood.toml
+++ b/redwood.toml
@@ -6,16 +6,15 @@
 # https://redwoodjs.com/docs/app-configuration-redwood-toml
 
 [web]
-  title = "Redwood App"
-  port = 8914
+  title = "Cr3dentials App"
+  port = 8917
   apiUrl = "/.redwood/functions" # You can customize graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
   includeEnvironmentVariables = [
     # Add any ENV vars that should be available to the web side to this array
     # See https://redwoodjs.com/docs/environment-variables#web
   ]
 [api]
-  port = 8913
+  port = 8915
 [browser]
   open = true
-[notifications]
   versionUpdates = ["latest"]
