--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "6.3.1",
+    "@redwoodjs/core": "6.3.2",
     "prisma": "^5.3.1"
   },
   "eslintConfig": {
@@ -15,7 +15,7 @@
     "root": true
   },
   "engines": {
-    "node": "=18.x",
+    "node": "18.x",
     "yarn": ">=1.15"
   },
   "prisma": {
