--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "packageManager": "yarn@3.6.3",
   "dependencies": {
+    "@redwoodjs/graphql-server": "^6.4.0",
+    "@redwoodjs/web": "^6.4.0",
     "axios": "^1.5.0",
     "graphql-tag": "^2.12.6",
     "redwood": "^0.0.1"
