--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@redwoodjs/core": "6.3.2",
-    "prisma": "^5.4.0"
+    "prisma": "^5.6.0"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
@@ -23,6 +23,7 @@
   },
   "packageManager": "yarn@3.6.3",
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "@redwoodjs/graphql-server": "^6.4.0",
     "@redwoodjs/realtime": "^6.4.0",
     "@redwoodjs/web": "^6.4.0",
