files are missing for some contracts so i put the ones that are ready for testing in another folder so that forge only builds those ones

--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1",
     "@redwoodjs/api": "6.3.2",
     "@redwoodjs/graphql-server": "6.3.2"
   }
