--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ api/src/lib/generateGraphiQLHeader.*
 !.yarn/versions
 package-lock.json
 foundryOut/*
+
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
