--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "packageManager": "yarn@3.6.3",
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "@openzeppelin/hardhat-upgrades": "^3.0.5",
     "@redwoodjs/graphql-server": "^6.4.0",
     "@redwoodjs/web": "^6.4.0",
     "axios": "^1.6.2",
