fix: types error in entry file

--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@redwoodjs/vite": "6.3.2"
+    "@redwoodjs/vite": "6.3.2",
+    "@types/react": "^18.3.1"
   }
 }
